<resources>
    <string name="app_name">Space News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">tombol back</string>
    <string name="article_detail">Detail Artikel</string>
    <string name="no_articles_found">No articles found</string>
    <string name="no_recent_articles">No recent articles</string>
    <string name="source">SOURCE</string>
    <string name="date_time">DATE TIME</string>
    <string name="description">DESCRIPTION</string>
    <string name="title">TITLE</string>
    <string name="article_image_description">Image for the article</string>
    <string name="history">History</string>
    <string name="separator">-</string>
</resources>